[gd_scene load_steps=3 format=2]

[ext_resource path="res://api_interface.gd" type="Script" id=1]
[ext_resource path="res://api_controller.gd" type="Script" id=2]

[node name="APIInterface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="APIController" type="Node" parent="."]
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
margin_right = 984.0
margin_bottom = 14.0
text = "LuminusOS - Multi-API Interface"
align = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 984.0
margin_bottom = 22.0

[node name="PromptLabel" type="Label" parent="VBoxContainer"]
margin_top = 26.0
margin_right = 984.0
margin_bottom = 40.0
text = "Enter your prompt:"

[node name="PromptInput" type="TextEdit" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 984.0
margin_bottom = 144.0
rect_min_size = Vector2( 0, 100 )
text = "Create a terminal command to manipulate words in 3D space."

[node name="ButtonsContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 148.0
margin_right = 984.0
margin_bottom = 178.0
rect_min_size = Vector2( 0, 30 )
alignment = 1

[node name="ClaudeButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
margin_left = 316.0
margin_right = 396.0
margin_bottom = 30.0
rect_min_size = Vector2( 80, 0 )
text = "Claude API"

[node name="GeminiButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
margin_left = 400.0
margin_right = 491.0
margin_bottom = 30.0
rect_min_size = Vector2( 80, 0 )
text = "Gemini API"

[node name="CompareButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
margin_left = 495.0
margin_right = 667.0
margin_bottom = 30.0
rect_min_size = Vector2( 80, 0 )
disabled = true
text = "Compare Responses"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 182.0
margin_right = 984.0
margin_bottom = 186.0

[node name="ResponseContainer" type="Control" parent="VBoxContainer"]
margin_top = 190.0
margin_right = 984.0
margin_bottom = 560.0
size_flags_vertical = 3

[node name="ClaudePanel" type="Panel" parent="VBoxContainer/ResponseContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelLabel" type="Label" parent="VBoxContainer/ResponseContainer/ClaudePanel"]
anchor_right = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 24.0
text = "Claude API Response:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/ResponseContainer/ClaudePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 30.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/ResponseContainer/ClaudePanel/ScrollContainer"]
margin_right = 964.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Waiting for response..."
autowrap = true

[node name="GeminiPanel" type="Panel" parent="VBoxContainer/ResponseContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelLabel" type="Label" parent="VBoxContainer/ResponseContainer/GeminiPanel"]
anchor_right = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 24.0
text = "Gemini API Response:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/ResponseContainer/GeminiPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 30.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/ResponseContainer/GeminiPanel/ScrollContainer"]
margin_right = 964.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Waiting for response..."
autowrap = true

[node name="ComparePanel" type="Panel" parent="VBoxContainer/ResponseContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelLabel" type="Label" parent="VBoxContainer/ResponseContainer/ComparePanel"]
anchor_right = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 24.0
text = "API Response Comparison:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/ResponseContainer/ComparePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 30.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/ResponseContainer/ComparePanel/ScrollContainer"]
margin_right = 964.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "No responses to compare yet."
autowrap = true